Fix blank site issue: make CSRF and audit logging defensive, remove strict CSP that blocks app

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Security Headers (Note: These should also be set at server/CDN level) -->
+    <!-- Removed CSP meta tag - it's too strict for Vite dev server and should be set at server level -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="DENY" />
     <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com https://*.mapbox.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://api.mapbox.com https://api.resend.com wss://*.supabase.co; frame-src 'self';" />
     
   <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/HU45Mz21wIYXnhaW6iVGssUf6c02/uploads/1766690166705-Photoroom_20251225_123234-removebg-preview.png">
   
